--- a/index.html
+++ b/index.html
@@ -9,7 +9,27 @@
 </head>
 <body>
     <main>
-        <iframe src="https://dant3s15.github.io/challenge-bank/" frameborder="0"></iframe>
+        <div class="finished">
+           <div class="project"><iframe src="https://dant3s15.github.io/challenge-bank/"  frameborder="0" scrolling="no"></iframe></div>
+           <div class="project"><iframe src="https://dant3s15.github.io/tip-calculator-app-main/" frameborder="0" scrolling="no"></iframe></div>
+           <div class="project"><iframe src="https://dant3s15.github.io/sunnyside-agency-landing-page-main/" frameborder="0" scrolling="no"></iframe></div>
+           <div class="project"><iframe src="https://dant3s15.github.io/stats-preview-card-component-main2/" frameborder="0" scrolling="no"></iframe></div>
+           <div class="project"></div>
+           <div class="project"></div>
+           <div class="project"></div>
+        </div>
+        <div class="wip">
+            <div class="project"><iframe src="https://dant3s15.github.io/loopstudios-landing-page-main/" frameborder="0" scrolling="no"></iframe></div>
+            <div class="project"><iframe src="https://dant3s15.github.io/JS-Rubik-s-Cube/" frameborder="0" scrolling="no"></iframe></div>
+
+            <div class="project"></div>
+            <div class="project"></div>
+            <div class="project"></div>
+            <div class="project"></div>
+            <div class="project"></div>
+            <div class="project"></div>
+        </div>
     </main>
+    <script src="src/js/script.js"></script>
 </body>
 </html>
