--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
     <main>
         <div class="finished">
-           <div class="project"><iframe src="https://dant3s15.github.io/challenge-bank/"  frameborder="0" scrolling="no"></iframe> <div class="overlay"></div></div>
-           <div class="project"><iframe src="https://dant3s15.github.io/tip-calculator-app-main/" frameborder="0" scrolling="no"></iframe> <div class="overlay"></div></div>
-           <div class="project"><iframe src="https://dant3s15.github.io/sunnyside-agency-landing-page-main/" frameborder="0" scrolling="no"></iframe> <div class="overlay"></div></div>
-           <div class="project"><iframe src="https://dant3s15.github.io/stats-preview-card-component-main2/" frameborder="0" scrolling="no"></iframe> <div class="overlay"></div></div>
+           <div class="project" id="project-1"><iframe id="iframe-1" src="https://dant3s15.github.io/challenge-bank/"  frameborder="0" scrolling="no"></iframe> <div class="overlay"></div></div>
+           <div class="project" id="project-2"><iframe id="iframe-2" src="https://dant3s15.github.io/tip-calculator-app-main/" frameborder="0" scrolling="no"></iframe> <div class="overlay"></div></div>
+           <div class="project" id="project-3"><iframe id="iframe-3" src="https://dant3s15.github.io/sunnyside-agency-landing-page-main/" frameborder="0" scrolling="no"></iframe> <div class="overlay"></div></div>
+           <div class="project" id="project-4"><iframe id="iframe-4" src="https://dant3s15.github.io/stats-preview-card-component-main2/" frameborder="0" scrolling="no"></iframe> <div class="overlay"></div></div>
            <div class="project"></div>
            <div class="project"></div>
            <div class="project"></div>
