--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
         <div class="wip">
             <div class="project"><iframe src="https://dant3s15.github.io/loopstudios-landing-page-main/" frameborder="0" scrolling="no"> <div class="overlay"></div></iframe></div>
-            <div class="project"><iframe src="https://dant3s15.github.io/JS-Rubik-s-Cube/" frameborder="0" scrolling="no"> <div class="overlay"></div></iframe></div>
+            <!-- <div class="project"><iframe src="https://dant3s15.github.io/JS-Rubik-s-Cube/" frameborder="0" scrolling="no"> <div class="overlay"></div></iframe></div> -->
 
             <div class="project"></div>
             <div class="project"></div>
