project card improvements

--- a/index.html
+++ b/index.html
@@ -9,14 +9,13 @@
 </head>
 <body>
     <main>
+        <div id="main-overlay"></div>
         <div class="finished">
            <div class="project" id="project"><iframe id="iframe-1" src="https://dant3s15.github.io/challenge-bank/"  frameborder="0" scrolling="no"></iframe> <div class="overlay"></div></div>
            <div class="project" id="project"><iframe id="iframe-2" src="https://dant3s15.github.io/tip-calculator-app-main/" frameborder="0" scrolling="no"></iframe> <div class="overlay"></div></div>
            <div class="project" id="project"><iframe id="iframe-3" src="https://dant3s15.github.io/sunnyside-agency-landing-page-main/" frameborder="0" scrolling="no"></iframe> <div class="overlay"></div></div>
            <div class="project" id="project"><iframe id="iframe-4" src="https://dant3s15.github.io/stats-preview-card-component-main2/" frameborder="0" scrolling="no"></iframe> <div class="overlay"></div></div>
-           <div class="project"></div>
-           <div class="project"></div>
-           <div class="project"></div>
+
         </div>
         <div class="wip">
             <div class="project"><iframe src="https://dant3s15.github.io/loopstudios-landing-page-main/" frameborder="0" scrolling="no"> <div class="overlay"></div></iframe></div>
