added test switch for mobile view

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <main>
+        <button class="mobileordesktop">SWITCH</button>
         <div id="main-overlay"></div>
         <div class="finished">
            <div class="project" id="project"><iframe id="iframe-1" src="https://dant3s15.github.io/challenge-bank/"  frameborder="0" scrolling="no"></iframe> <div class="overlay"></div></div>
